fix: 로그인 로직에 별명 추가 및 테스트 컨트롤러 추가